@@ -89,6 +89,7 @@ John McGowan
 Sisyphus
 Jens Rehsack <jens.rehsack@bayerbbs.com>
 Dagobert Michelsen <dam@opencsw.org>
+Guenter Knauf <gk@gknw.de>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
