@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 * Version 1.15 (unreleased)
 
+** libidn: Use c_strcasecmp instead of strcasecmp.
+For portability to NetWare CLIB.  The specification wants a ASCII
+comparison, so it is more appropriate to use c_strcasecmp.  Reported
+by Guenter Knauf <gk@gknw.de>.
+
 ** doc: Improved sections for the info manual.
 We now follow the advice given by the texinfo manual on which
 directory categories to use.  In particular, libidn moved from the
